force-app/main/default/objects/Fund__c/fields/CapIQ_Company__c.field-meta.xml
<CustomField>
    <fullName>CapIQ_Company__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CapIQ Company</label>
    <referenceTo>CapIQ_Company__c</referenceTo>
    <relationshipLabel>Funds</relationshipLabel>
    <relationshipName>Funds</relationshipName>
    <type>Lookup</type>
</CustomField>