force-app/main/default/objects/Fund__c/fields/Latest__c.field-meta.xml
<CustomField>
    <fullName>Latest__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Latest</label>
    <type>Checkbox</type>
</CustomField>