force-app/main/default/objects/Fund__c/fields/Strategy__c.field-meta.xml
<CustomField>
    <fullName>Strategy__c</fullName>
    <label>Strategy</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>